@@ -47,6 +47,7 @@ export(Tlab)
 export(Tline)
 export(Wlab)
 export(aes)
+export(annotate)
 export(annotation_raster_tern)
 export(arrangeGrob)
 export(atomic_percent)
